# Computer-Vision-Project

./: .gitignore  Info Test Set.txt  ObjectDectection.ipynb  README.md  TrainModel.ipynb
Matlab Scripts/: script_csv.m  script_xml.m  script_yolo.m
MatlabScripts/: myscript.m
Project/: BagOfWords.cpp  BagOfWords.h  CMakeLists.txt  ImageDet.cpp  ImageDetection.cpp  Segmentator.h  UtilsHoughTransform.cpp  UtilsHoughTransform.h  main.cpp  model.ylm  model.yml
Project/include/: ConvexHull.h  Detector.h  Evaluation.h  HandDetector.cpp  HandDetector.h  ImageDetection.h  PreProcSegmentator.h  Segment.h  Segmentator.h  Trainer.h  Utils.h  UtilsHoughTransform.h
Project/source/: BagOfWords.cpp  ConvexHull.cpp  Detector.cpp  Evaluation.cpp  ImageDetection.cpp  PreProcSegmentator.cpp  Segment.cpp  Segmentator.cpp  Trainer.cpp  Utils.cpp  UtilsHoughTransform.cpp  main.cpp  train_HOG.cpp
Report/: main.tex  titlepage.tex
Report/chapters/: conclusions.tex  contribution.tex  detection.tex  results.tex  segmentation.tex  unusedSegmentation.tex
enc_temp_folder/4c5cb6248d6c91c7225b11a5475b5ca0/: Detector.cpp
matlab_scripts/: create_annotations_egohands_dataset.m
matlab_scripts/segmentation/: README.MD  clean_dataset.m  contrast_blur_h_new.m  convert_model.m  deeplabv3plusLayersAle.m  designDeepLabV3plus.m  format_dataset.m  imagesTrasformation_new.m  shadows_new.m  train_DA.m
problems/: README.MD
problems/c++/: CMakeLists.txt
problems/python/: results.txt  try.py
python_scripts/: TrainCNN.ipynb  build.py  convert_model_to_opencv.py  fine_tune_cnn.py
(+9 files in other folders)
